<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/num1"
        android:textStyle="italic"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/num2"
        android:textStyle="italic"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/c_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1"
        android:layout_marginTop="20dp"
        android:hint="@string/result"
        />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/add"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/c_text_view"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/sub"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/c_text_view"
        />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/multi"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/c_text_view"
        app:layout_constraintLeft_toRightOf="@id/btn_sub"/>

    <Button
        android:id="@+id/btn_div"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/divide"
        android:layout_margin="10dp"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/c_text_view"
        app:layout_constraintLeft_toRightOf="@id/btn_multi"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/save"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>